--- a/content2.html
+++ b/content2.html
@@ -1108,28 +1108,141 @@
                                         alt="Talabat Ride Event">
                                 </div>
                             </div>
-
                             <div class="gallery-item 003">
                                 <div class="gallery-item-inner gallery-img">
-                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/TALABAT/ZMP_0471.JPG"
-                                        alt="Talabat">
+                                    <img loading="lazy"
+                                        src="img/visit-our-gallery/lifestyle/EDIBLE WORLDCUP_OCT_2022_FOOD ON FOCUS_ (2).jpg"
+                                        alt="Bombay Lifestyle">
                                 </div>
                             </div>
-
                             <div class="gallery-item 003">
                                 <div class="gallery-item-inner gallery-img">
-                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/TALABAT/ZMP_3541.jpg"
-                                        alt="Talabat">
+                                    <img loading="lazy"
+                                        src="img/visit-our-gallery/lifestyle/EDIBLE WORLDCUP_OCT_2022_FOOD ON FOCUS_ (4).jpg"
+                                        alt="Bombay Lifestyle">
                                 </div>
                             </div>
-
                             <div class="gallery-item 003">
                                 <div class="gallery-item-inner gallery-img">
-                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/TALABAT/ZMP_3950.jpg"
-                                        alt="Talabat">
+                                    <img loading="lazy"
+                                        src="img/visit-our-gallery/lifestyle/FOOD ON FOCUS MEDIA_GLADIO CAFE_SOCIAL MEDIA_SEPT _IMG_5322 .jpg"
+                                        alt="Bombay Lifestyle">
                                 </div>
                             </div>
-
+                            <div class="gallery-item 003">
+                                <div class="gallery-item-inner gallery-img">
+                                    <img loading="lazy"
+                                        src="img/visit-our-gallery/lifestyle/FOOD ON FOCUS MEDIA_GLADIO CAFE_SOCIAL MEDIA_SEPT _IMG_5356  (1).jpg"
+                                        alt="Bombay Lifestyle">
+                                </div>
+                            </div>
+                            <div class="gallery-item 003">
+                                <div class="gallery-item-inner gallery-img">
+                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/IMG_1095.JPG"
+                                        alt="Bombay Lifestyle">
+                                </div>
+                            </div>
+                            <div class="gallery-item 003">
+                                <div class="gallery-item-inner gallery-img">
+                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/IMG_4681.jpg"
+                                        alt="Bombay Lifestyle">
+                                </div>
+                            </div>
+                            <div class="gallery-item 003">
+                                <div class="gallery-item-inner gallery-img">
+                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/IMG_4682.jpg"
+                                        alt="Bombay Lifestyle">
+                                </div>
+                            </div>
+                            <div class="gallery-item 003">
+                                <div class="gallery-item-inner gallery-img">
+                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/IMG_9589 (1).JPG"
+                                        alt="Bombay Lifestyle">
+                                </div>
+                            </div>
+                            <div class="gallery-item 003">
+                                <div class="gallery-item-inner gallery-img">
+                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/IMG_9609 (1).JPG"
+                                        alt="Bombay Lifestyle">
+                                </div>
+                            </div>
+                            <div class="gallery-item 003">
+                                <div class="gallery-item-inner gallery-img">
+                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/IMG_9616.JPG"
+                                        alt="Bombay Lifestyle">
+                                </div>
+                            </div>
+                            <div class="gallery-item 003">
+                                <div class="gallery-item-inner gallery-img">
+                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/IMG_9730 (1).JPG"
+                                        alt="Bombay Lifestyle">
+                                </div>
+                            </div>
+                            <div class="gallery-item 003">
+                                <div class="gallery-item-inner gallery-img">
+                                    <img loading="lazy"
+                                        src="img/visit-our-gallery/lifestyle/IRISH_WICKERS_FOOD_PHOTOGRAPHY_FOODONFOCUSMEDIA-0668.jpg"
+                                        alt="Bombay Lifestyle">
+                                </div>
+                            </div>
+                            <div class="gallery-item 003">
+                                <div class="gallery-item-inner gallery-img">
+                                    <img loading="lazy"
+                                        src="img/visit-our-gallery/lifestyle/IRISH_WICKERS_FOOD_PHOTOGRAPHY_FOODONFOCUSMEDIA-0696 .jpg"
+                                        alt="Bombay Lifestyle">
+                                </div>
+                            </div>
+                            <div class="gallery-item 003">
+                                <div class="gallery-item-inner gallery-img">
+                                    <img loading="lazy"
+                                        src="img/visit-our-gallery/lifestyle/IRISH_WICKERS_FOOD_PHOTOGRAPHY_FOODONFOCUSMEDIA-0864 .jpg"
+                                        alt="Bombay Lifestyle">
+                                </div>
+                            </div>
+                            <div class="gallery-item 003">
+                                <div class="gallery-item-inner gallery-img">
+                                    <img loading="lazy"
+                                        src="img/visit-our-gallery/lifestyle/IRISH_WICKERS_FOOD_PHOTOGRAPHY_FOODONFOCUSMEDIA-0896 .jpg"
+                                        alt="Bombay Lifestyle">
+                                </div>
+                            </div>
+                            <div class="gallery-item 003">
+                                <div class="gallery-item-inner gallery-img">
+                                    <img loading="lazy"
+                                        src="img/visit-our-gallery/lifestyle/IRISH_WICKERS_FOOD_PHOTOGRAPHY_FOODONFOCUSMEDIA-0922.jpg"
+                                        alt="Bombay Lifestyle">
+                                </div>
+                            </div>
+                            <div class="gallery-item 003">
+                                <div class="gallery-item-inner gallery-img">
+                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/Talabat Ride Event.png"
+                                        alt="Bombay Lifestyle">
+                                </div>
+                            </div>
+                            <div class="gallery-item 003">
+                                <div class="gallery-item-inner gallery-img">
+                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/ZMP_0471.JPG"
+                                        alt="Bombay Lifestyle">
+                                </div>
+                            </div>
+                            <div class="gallery-item 003">
+                                <div class="gallery-item-inner gallery-img">
+                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/ZMP_3541.jpg"
+                                        alt="Bombay Lifestyle">
+                                </div>
+                            </div>
+                            <div class="gallery-item 003">
+                                <div class="gallery-item-inner gallery-img">
+                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/ZMP_3950.jpg"
+                                        alt="Bombay Lifestyle">
+                                </div>
+                            </div>
+                            <div class="gallery-item 003">
+                                <div class="gallery-item-inner gallery-img">
+                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/ZMP_8695.jpg"
+                                        alt="Bombay Lifestyle">
+                                </div>
+                            </div>
 
                             <!-- 004 Menushoot -->
                             <div class="gallery-item 004">
