--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -1,440 +1,121 @@
-<div class="gallery-item 006">
+<div class="gallery-item 003">
     <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/1.jpeg">
+        <img loading="lazy" src="img/visit-our-gallery/lifestyle/EDIBLE WORLDCUP_OCT_2022_FOOD ON FOCUS_ (2).jpg"
+            alt="Bombay Lifestyle">
     </div>
 </div>
-
-
-
-<div class="gallery-item 006">
+<div class="gallery-item 003">
     <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/10.jpeg">
+        <img loading="lazy" src="img/visit-our-gallery/lifestyle/EDIBLE WORLDCUP_OCT_2022_FOOD ON FOCUS_ (4).jpg"
+            alt="Bombay Lifestyle">
     </div>
 </div>
-
-
-
-<div class="gallery-item 006">
+<div class="gallery-item 003">
     <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/11.jpeg">
+        <img loading="lazy"
+            src="img/visit-our-gallery/lifestyle/FOOD ON FOCUS MEDIA_GLADIO CAFE_SOCIAL MEDIA_SEPT _IMG_5322 .jpg"
+            alt="Bombay Lifestyle">
     </div>
 </div>
-
-
-
-<div class="gallery-item 006">
+<div class="gallery-item 003">
     <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/12.jpeg">
+        <img loading="lazy"
+            src="img/visit-our-gallery/lifestyle/FOOD ON FOCUS MEDIA_GLADIO CAFE_SOCIAL MEDIA_SEPT _IMG_5356  (1).jpg"
+            alt="Bombay Lifestyle">
     </div>
 </div>
-
-
-
-<div class="gallery-item 006">
+<div class="gallery-item 003">
     <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/13.jpeg">
+        <img loading="lazy" src="img/visit-our-gallery/lifestyle/IMG_1095.JPG" alt="Bombay Lifestyle">
     </div>
 </div>
-
-
-
-<div class="gallery-item 006">
+<div class="gallery-item 003">
     <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/14.jpeg">
+        <img loading="lazy" src="img/visit-our-gallery/lifestyle/IMG_4681.jpg" alt="Bombay Lifestyle">
     </div>
 </div>
-
-
-
-<div class="gallery-item 006">
+<div class="gallery-item 003">
     <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/15.jpeg">
+        <img loading="lazy" src="img/visit-our-gallery/lifestyle/IMG_4682.jpg" alt="Bombay Lifestyle">
     </div>
 </div>
-
-
-
-<div class="gallery-item 006">
+<div class="gallery-item 003">
     <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/16.jpeg">
+        <img loading="lazy" src="img/visit-our-gallery/lifestyle/IMG_9589 (1).JPG" alt="Bombay Lifestyle">
     </div>
 </div>
-
-
-
-<div class="gallery-item 006">
+<div class="gallery-item 003">
     <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/17.jpeg">
+        <img loading="lazy" src="img/visit-our-gallery/lifestyle/IMG_9609 (1).JPG" alt="Bombay Lifestyle">
     </div>
 </div>
-
-
-
-<div class="gallery-item 006">
+<div class="gallery-item 003">
     <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/18.jpeg">
+        <img loading="lazy" src="img/visit-our-gallery/lifestyle/IMG_9616.JPG" alt="Bombay Lifestyle">
     </div>
 </div>
-
-
-
-<div class="gallery-item 006">
+<div class="gallery-item 003">
     <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/2.jpeg">
+        <img loading="lazy" src="img/visit-our-gallery/lifestyle/IMG_9730 (1).JPG" alt="Bombay Lifestyle">
     </div>
 </div>
-
-
-
-<div class="gallery-item 006">
+<div class="gallery-item 003">
     <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/3.jpeg">
+        <img loading="lazy"
+            src="img/visit-our-gallery/lifestyle/IRISH_WICKERS_FOOD_PHOTOGRAPHY_FOODONFOCUSMEDIA-0668.jpg"
+            alt="Bombay Lifestyle">
     </div>
 </div>
-
-
-
-<div class="gallery-item 006">
+<div class="gallery-item 003">
     <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/4.jpeg">
+        <img loading="lazy"
+            src="img/visit-our-gallery/lifestyle/IRISH_WICKERS_FOOD_PHOTOGRAPHY_FOODONFOCUSMEDIA-0696 .jpg"
+            alt="Bombay Lifestyle">
     </div>
 </div>
-
-
-
-<div class="gallery-item 006">
+<div class="gallery-item 003">
     <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/4T3A6819 (1).JPG">
+        <img loading="lazy"
+            src="img/visit-our-gallery/lifestyle/IRISH_WICKERS_FOOD_PHOTOGRAPHY_FOODONFOCUSMEDIA-0864 .jpg"
+            alt="Bombay Lifestyle">
     </div>
 </div>
-
-
-
-<div class="gallery-item 006">
+<div class="gallery-item 003">
     <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/5.jpeg">
+        <img loading="lazy"
+            src="img/visit-our-gallery/lifestyle/IRISH_WICKERS_FOOD_PHOTOGRAPHY_FOODONFOCUSMEDIA-0896 .jpg"
+            alt="Bombay Lifestyle">
     </div>
 </div>
-
-
-
-<div class="gallery-item 006">
+<div class="gallery-item 003">
     <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/6.jpeg">
+        <img loading="lazy"
+            src="img/visit-our-gallery/lifestyle/IRISH_WICKERS_FOOD_PHOTOGRAPHY_FOODONFOCUSMEDIA-0922.jpg"
+            alt="Bombay Lifestyle">
     </div>
 </div>
-
-
-
-<div class="gallery-item 006">
+<div class="gallery-item 003">
     <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/7.jpeg">
+        <img loading="lazy" src="img/visit-our-gallery/lifestyle/Talabat Ride Event.png" alt="Bombay Lifestyle">
     </div>
 </div>
-
-
-
-<div class="gallery-item 006">
+<div class="gallery-item 003">
     <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/8.jpeg">
+        <img loading="lazy" src="img/visit-our-gallery/lifestyle/ZMP_0471.JPG" alt="Bombay Lifestyle">
     </div>
 </div>
-
-
-
-<div class="gallery-item 006">
+<div class="gallery-item 003">
     <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/9.jpeg">
+        <img loading="lazy" src="img/visit-our-gallery/lifestyle/ZMP_3541.jpg" alt="Bombay Lifestyle">
     </div>
 </div>
-
-
-
-<div class="gallery-item 006">
+<div class="gallery-item 003">
     <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte"
-            src="img/visit-our-gallery/powervisuals/CONTENT PRODUCTION_OMA_DEC_2024_ZMP_0547.jpg">
+        <img loading="lazy" src="img/visit-our-gallery/lifestyle/ZMP_3950.jpg" alt="Bombay Lifestyle">
     </div>
 </div>
-
-
-
-<div class="gallery-item 006">
+<div class="gallery-item 003">
     <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte"
-            src="img/visit-our-gallery/powervisuals/CONTENT PRODUCTION_OMA_DEC_2024_ZMP_1737.jpg">
-    </div>
-</div>
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte"
-            src="img/visit-our-gallery/powervisuals/CONTENT PRODUCTION_OMA_DEC_2024_ZMP_1753.jpg">
-    </div>
-</div>
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/Copy of IMG_7605.jpg">
-    </div>
-</div>
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/Copy of IMG_7685.jpg">
-    </div>
-</div>
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte"
-            src="img/visit-our-gallery/powervisuals/FOOD ON FOCUS_ CONTENT PRODUCTION_OMA_NOV_2024_IMG_0005.jpg">
-    </div>
-</div>
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte"
-            src="img/visit-our-gallery/powervisuals/FOOD ON FOCUS_ CONTENT PRODUCTION_OMA_NOV_2024_IMG_0029.jpg">
-    </div>
-</div>
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte"
-            src="img/visit-our-gallery/powervisuals/FOOD ON FOCUS_ CONTENT PRODUCTION_OMA_NOV_2024_IMG_9981.jpg">
-    </div>
-</div>
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte"
-            src="img/visit-our-gallery/powervisuals/FOOD ON FOCUS_ CONTENT PRODUCTION_OMA_NOV_2024_IMG_9995.jpg">
-    </div>
-</div>
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte"
-            src="img/visit-our-gallery/powervisuals/FOOD ON FOCUS_ CONTENT PRODUCTION_OMA_NOV_2024_ZMP_0278.jpg">
-    </div>
-</div>
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte"
-            src="img/visit-our-gallery/powervisuals/FOOD ON FOCUS_ CONTENT PRODUCTION_OMA_NOV_2024_ZMP_0280.jpg">
-    </div>
-</div>
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte"
-            src="img/visit-our-gallery/powervisuals/FOOD ON FOCUS_ CONTENT PRODUCTION_OMA_NOV_2024_ZMP_0324.jpg">
-    </div>
-</div>
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte"
-            src="img/visit-our-gallery/powervisuals/FOOD ON FOCUS_ CONTENT PRODUCTION_OMA_OCT_2024_ZMP_8865 .jpg">
-    </div>
-</div>
-
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte"
-            src="img/visit-our-gallery/powervisuals/FOOD ON FOCUS_ CONTENT PRODUCTION_OMA_OCT_2024_ZMP_8875 .jpg">
-    </div>
-</div>
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte"
-            src="img/visit-our-gallery/powervisuals/FOOD ON FOCUS_ CONTENT PRODUCTION_OMA_OCT_2024_ZMP_8902 .jpg">
-    </div>
-</div>
-
-
-
-<!-- <div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte"
-            src="img/visit-our-gallery/powervisuals/FOOD ON FOCUS_ CONTENT PRODUCTION_OMA_OCT_2024_ZMP_8920 (1).jpg">
-    </div>
-</div> -->
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte"
-            src="img/visit-our-gallery/powervisuals/FOOD ON FOCUS_ CONTENT PRODUCTION_OMA_OCT_2024_ZMP_8920 .jpg">
-    </div>
-</div>
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte"
-            src="img/visit-our-gallery/powervisuals/FOOD ON FOCUS_ CONTENT PRODUCTION_OMA_OCT_2024_ZMP_8949 .jpg">
-    </div>
-</div>
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte"
-            src="img/visit-our-gallery/powervisuals/FOOD ON FOCUS_ CONTENT PRODUCTION_OMA_SEPT_2024_ZMP_6320.jpg">
-    </div>
-</div>
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte"
-            src="img/visit-our-gallery/powervisuals/FOOD ON FOCUS_ CONTENT PRODUCTION_OMA_SEPT_2024_ZMP_6360.jpg">
-    </div>
-</div>
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/IMG_1158 (1) (2).jpg">
-    </div>
-</div>
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/IMG_1220.jpg">
-    </div>
-</div>
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/IMG_1518 edited.jpg">
-    </div>
-</div>
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/IMG_1650 edited (2).jpg">
-    </div>
-</div>
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/IMG_1726 edited (1).jpg">
-    </div>
-</div>
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/IMG_1781 extended.jpg">
-    </div>
-</div>
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/IMG_7633.jpg">
-    </div>
-</div>
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/IMG_7646.jpg">
-    </div>
-</div>
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/IMG_7680.jpg">
-    </div>
-</div>
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/IMG_8340 (1).jpg">
-    </div>
-</div>
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/IMG_8343 (1).jpg">
-    </div>
-</div>
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/IMG_8405.jpg">
-    </div>
-</div>
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/ZMP_6885 revised.jpg">
-    </div>
-</div>
-
-
-
-<div class="gallery-item 006">
-    <div class="gallery-item-inner gallery-img">
-        <img loading="lazy" alt="Almond Chai Latte" src="img/visit-our-gallery/powervisuals/ZMP_6909.jpg">
+        <img loading="lazy" src="img/visit-our-gallery/lifestyle/ZMP_8695.jpg" alt="Bombay Lifestyle">
     </div>
 </div>
