--- a/content.html
+++ b/content.html
@@ -975,158 +975,137 @@
                             <!-- 003 Lifestyle -->
                             <div class="gallery-item 003">
                                 <div class="gallery-item-inner gallery-img">
-                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/BOMBAY/IMG_9589 (1).JPG"
+                                    <img loading="lazy"
+                                        src="img/visit-our-gallery/lifestyle/EDIBLE WORLDCUP_OCT_2022_FOOD ON FOCUS_ (2).jpg"
                                         alt="Bombay Lifestyle">
                                 </div>
                             </div>
-
                             <div class="gallery-item 003">
                                 <div class="gallery-item-inner gallery-img">
-                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/BOMBAY/IMG_9609 (1).JPG"
+                                    <img loading="lazy"
+                                        src="img/visit-our-gallery/lifestyle/EDIBLE WORLDCUP_OCT_2022_FOOD ON FOCUS_ (4).jpg"
                                         alt="Bombay Lifestyle">
                                 </div>
                             </div>
-
                             <div class="gallery-item 003">
                                 <div class="gallery-item-inner gallery-img">
-                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/BOMBAY/IMG_9616.JPG"
+                                    <img loading="lazy"
+                                        src="img/visit-our-gallery/lifestyle/FOOD ON FOCUS MEDIA_GLADIO CAFE_SOCIAL MEDIA_SEPT _IMG_5322 .jpg"
                                         alt="Bombay Lifestyle">
                                 </div>
                             </div>
-
                             <div class="gallery-item 003">
                                 <div class="gallery-item-inner gallery-img">
-                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/BOMBAY/IMG_9730 (1).JPG"
+                                    <img loading="lazy"
+                                        src="img/visit-our-gallery/lifestyle/FOOD ON FOCUS MEDIA_GLADIO CAFE_SOCIAL MEDIA_SEPT _IMG_5356  (1).jpg"
                                         alt="Bombay Lifestyle">
                                 </div>
                             </div>
-
+                            <div class="gallery-item 003">
+                                <div class="gallery-item-inner gallery-img">
+                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/IMG_1095.JPG"
+                                        alt="Bombay Lifestyle">
+                                </div>
+                            </div>
+                            <div class="gallery-item 003">
+                                <div class="gallery-item-inner gallery-img">
+                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/IMG_4681.jpg"
+                                        alt="Bombay Lifestyle">
+                                </div>
+                            </div>
+                            <div class="gallery-item 003">
+                                <div class="gallery-item-inner gallery-img">
+                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/IMG_4682.jpg"
+                                        alt="Bombay Lifestyle">
+                                </div>
+                            </div>
+                            <div class="gallery-item 003">
+                                <div class="gallery-item-inner gallery-img">
+                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/IMG_9589 (1).JPG"
+                                        alt="Bombay Lifestyle">
+                                </div>
+                            </div>
+                            <div class="gallery-item 003">
+                                <div class="gallery-item-inner gallery-img">
+                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/IMG_9609 (1).JPG"
+                                        alt="Bombay Lifestyle">
+                                </div>
+                            </div>
+                            <div class="gallery-item 003">
+                                <div class="gallery-item-inner gallery-img">
+                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/IMG_9616.JPG"
+                                        alt="Bombay Lifestyle">
+                                </div>
+                            </div>
+                            <div class="gallery-item 003">
+                                <div class="gallery-item-inner gallery-img">
+                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/IMG_9730 (1).JPG"
+                                        alt="Bombay Lifestyle">
+                                </div>
+                            </div>
                             <div class="gallery-item 003">
                                 <div class="gallery-item-inner gallery-img">
                                     <img loading="lazy"
-                                        src="img/visit-our-gallery/lifestyle/EDIBLE/EDIBLE WORLDCUP_OCT_2022_FOOD ON FOCUS_ (2).jpg"
-                                        alt="Edible Lifestyle">
+                                        src="img/visit-our-gallery/lifestyle/IRISH_WICKERS_FOOD_PHOTOGRAPHY_FOODONFOCUSMEDIA-0668.jpg"
+                                        alt="Bombay Lifestyle">
                                 </div>
                             </div>
-
                             <div class="gallery-item 003">
                                 <div class="gallery-item-inner gallery-img">
                                     <img loading="lazy"
-                                        src="img/visit-our-gallery/lifestyle/EDIBLE/EDIBLE WORLDCUP_OCT_2022_FOOD ON FOCUS_ (4).jpg"
-                                        alt="Edible Lifestyle">
+                                        src="img/visit-our-gallery/lifestyle/IRISH_WICKERS_FOOD_PHOTOGRAPHY_FOODONFOCUSMEDIA-0696 .jpg"
+                                        alt="Bombay Lifestyle">
                                 </div>
                             </div>
-
                             <div class="gallery-item 003">
                                 <div class="gallery-item-inner gallery-img">
                                     <img loading="lazy"
-                                        src="img/visit-our-gallery/lifestyle/GLADIO/FOOD ON FOCUS MEDIA_GLADIO CAFE_SOCIAL MEDIA_SEPT _IMG_5322 .jpg"
-                                        alt="Gladio Cafe">
+                                        src="img/visit-our-gallery/lifestyle/IRISH_WICKERS_FOOD_PHOTOGRAPHY_FOODONFOCUSMEDIA-0864 .jpg"
+                                        alt="Bombay Lifestyle">
                                 </div>
                             </div>
-
                             <div class="gallery-item 003">
                                 <div class="gallery-item-inner gallery-img">
                                     <img loading="lazy"
-                                        src="img/visit-our-gallery/lifestyle/GLADIO/FOOD ON FOCUS MEDIA_GLADIO CAFE_SOCIAL MEDIA_SEPT _IMG_5356  (1).jpg"
-                                        alt="Gladio Cafe">
+                                        src="img/visit-our-gallery/lifestyle/IRISH_WICKERS_FOOD_PHOTOGRAPHY_FOODONFOCUSMEDIA-0896 .jpg"
+                                        alt="Bombay Lifestyle">
                                 </div>
                             </div>
-
-                            <div class="gallery-item 003">
-                                <div class="gallery-item-inner gallery-img">
-                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/GULLY KITCHEN/IMG_1095.JPG"
-                                        alt="Gully Kitchen">
-                                </div>
-                            </div>
-
                             <div class="gallery-item 003">
                                 <div class="gallery-item-inner gallery-img">
                                     <img loading="lazy"
-                                        src="img/visit-our-gallery/lifestyle/IRISH WICKERS/IRISH_WICKERS_FOOD_PHOTOGRAPHY_FOODONFOCUSMEDIA-0668.jpg"
-                                        alt="Irish Wickers">
+                                        src="img/visit-our-gallery/lifestyle/IRISH_WICKERS_FOOD_PHOTOGRAPHY_FOODONFOCUSMEDIA-0922.jpg"
+                                        alt="Bombay Lifestyle">
                                 </div>
                             </div>
-
                             <div class="gallery-item 003">
                                 <div class="gallery-item-inner gallery-img">
-                                    <img loading="lazy"
-                                        src="img/visit-our-gallery/lifestyle/IRISH WICKERS/IRISH_WICKERS_FOOD_PHOTOGRAPHY_FOODONFOCUSMEDIA-0696 .jpg"
-                                        alt="Irish Wickers">
+                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/Talabat Ride Event.png"
+                                        alt="Bombay Lifestyle">
                                 </div>
                             </div>
-
                             <div class="gallery-item 003">
                                 <div class="gallery-item-inner gallery-img">
-                                    <img loading="lazy"
-                                        src="img/visit-our-gallery/lifestyle/IRISH WICKERS/IRISH_WICKERS_FOOD_PHOTOGRAPHY_FOODONFOCUSMEDIA-0864 .jpg"
-                                        alt="Irish Wickers">
+                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/ZMP_0471.JPG"
+                                        alt="Bombay Lifestyle">
                                 </div>
                             </div>
-
                             <div class="gallery-item 003">
                                 <div class="gallery-item-inner gallery-img">
-                                    <img loading="lazy"
-                                        src="img/visit-our-gallery/lifestyle/IRISH WICKERS/IRISH_WICKERS_FOOD_PHOTOGRAPHY_FOODONFOCUSMEDIA-0896 .jpg"
-                                        alt="Irish Wickers">
+                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/ZMP_3541.jpg"
+                                        alt="Bombay Lifestyle">
                                 </div>
                             </div>
-
                             <div class="gallery-item 003">
                                 <div class="gallery-item-inner gallery-img">
-                                    <img loading="lazy"
-                                        src="img/visit-our-gallery/lifestyle/IRISH WICKERS/IRISH_WICKERS_FOOD_PHOTOGRAPHY_FOODONFOCUSMEDIA-0922.jpg"
-                                        alt="Irish Wickers">
+                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/ZMP_3950.jpg"
+                                        alt="Bombay Lifestyle">
                                 </div>
                             </div>
-
                             <div class="gallery-item 003">
                                 <div class="gallery-item-inner gallery-img">
-                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/PLANTOHOLIC/ZMP_8695.jpg"
-                                        alt="Plantoholic">
-                                </div>
-                            </div>
-
-                            <div class="gallery-item 003">
-                                <div class="gallery-item-inner gallery-img">
-                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/TALABAT/IMG_4681.jpg"
-                                        alt="Talabat">
-                                </div>
-                            </div>
-
-                            <div class="gallery-item 003">
-                                <div class="gallery-item-inner gallery-img">
-                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/TALABAT/IMG_4682.jpg"
-                                        alt="Talabat">
-                                </div>
-                            </div>
-
-                            <div class="gallery-item 003">
-                                <div class="gallery-item-inner gallery-img">
-                                    <img loading="lazy"
-                                        src="img/visit-our-gallery/lifestyle/TALABAT/Talabat Ride Event.png"
-                                        alt="Talabat Ride Event">
-                                </div>
-                            </div>
-
-                            <div class="gallery-item 003">
-                                <div class="gallery-item-inner gallery-img">
-                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/TALABAT/ZMP_0471.JPG"
-                                        alt="Talabat">
-                                </div>
-                            </div>
-
-                            <div class="gallery-item 003">
-                                <div class="gallery-item-inner gallery-img">
-                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/TALABAT/ZMP_3541.jpg"
-                                        alt="Talabat">
-                                </div>
-                            </div>
-
-                            <div class="gallery-item 003">
-                                <div class="gallery-item-inner gallery-img">
-                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/TALABAT/ZMP_3950.jpg"
-                                        alt="Talabat">
+                                    <img loading="lazy" src="img/visit-our-gallery/lifestyle/ZMP_8695.jpg"
+                                        alt="Bombay Lifestyle">
                                 </div>
                             </div>
 
