Image is expanded to it's height

--- a/home-1.html
+++ b/home-1.html
@@ -308,7 +308,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/projects/1.jpeg" loading="lazy" alt="cover">
+                                                        <img src="img/projects/1.jpg" loading="lazy" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
