home page completed

--- a/home-1.html
+++ b/home-1.html
@@ -809,7 +809,7 @@
                                             <div class="mil-review-frame mil-center" data-swiper-parallax="-200"
                                                 data-swiper-parallax-opacity="0">
                                                 <h5 class="mil-up mil-mb-10 mil-maroon">Talabat</h5>
-                                                <p class="mil-mb-5 mil-upper mil-up mil-mb-30">Envato market</p>
+                                                <!-- <p class="mil-mb-5 mil-upper mil-up mil-mb-30">Envato market</p> -->
                                                 <p class="mil-text-xl mil-up">
                                                     Partnering with Food on Focus Media for our photography and
                                                     videography was a fantastic experience.Their professionalism,
