navigation errors resolved

--- a/content.html
+++ b/content.html
@@ -368,23 +368,23 @@
                 <!-- vertical video -->
                 <section class="vertical-video">
                     <h2 id="gallerytxt" style="padding-top: 25px;">Top Rated!</h2>
-                    <div class="container5">
+                    <div class="container5" style="text-transform: capitalize;">
 
                         <div class="box5">
                             <video src="video/alpro3.mp4" muted></video>
-                            <span style="color: #fbae19;">Video 1</span>
+                            <span style="color: #fbae19;">Alpro</span>
                         </div>
                         <div class="box5">
                             <video src="video/yellowtailcli3.mp4" muted></video>
-                            <span style="color: #fbae19;">Video 2</span>
+                            <span style="color: #fbae19;">YELLOW CEVICHE </span>
                         </div>
                         <div class="box5">
                             <video src="video/vid3.mp4" muted></video>
-                            <span style="color: #fbae19;">Video 3</span>
+                            <span style="color: #fbae19;">TALABAT</span>
                         </div>
                         <div class="box5">
                             <video src="video/wakame3.mp4" muted></video>
-                            <span style="color: #fbae19;">Video 4</span>
+                            <span style="color: #fbae19;">Wakame</span>
                         </div>
                     </div>
                 </section>
