talabat video uploded

--- a/content.html
+++ b/content.html
@@ -379,7 +379,7 @@
                             <span style="color: #fbae19;">YELLOW CEVICHE </span>
                         </div>
                         <div class="box5">
-                            <video src="video/vid3.mp4" muted></video>
+                            <video src="video/talabat3.mp4" muted></video>
                             <span style="color: #fbae19;">TALABAT</span>
                         </div>
                         <div class="box5">
